Further project cleanup. Removed unused classes, reduced visibility where possible for schema model implementation.